cmake_minimum_required(VERSION 3.4.1)
project(demo)
add_definitions("-Wall -g")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-pthread")

include_directories(/home/teamhd/demo/demo-gb/MPP/mpp/include)
include_directories(/home/teamhd/demo/demo-gb/MPP/osal/inc)
include_directories(/home/teamhd/demo/demo-gb/MPP/opencv4-1/include/opencv4)
link_libraries(/home/teamhd/demo/demo-gb/MPP/lib/libmpi_enc.so)
link_libraries(/home/teamhd/demo/demo-gb/MPP/lib/librockchip_mpp.so)
link_directories(/home/teamhd/demo/demo-gb/MPP/lib/libosal.a)
link_directories(/home/teamhd/demo/demo-gb/MPP/opencv4-1/lib)
set(LIB_OPENCV opencv_highgui opencv_imgproc opencv_core opencv_imgcodecs opencv_videoio opencv_video)
set(output /home/teamhd/demo/demo-gb/MPP/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${output})

add_executable(demo main.cc)
target_link_libraries(demo  ${LIB_OPENCV})